@@ -15,9 +15,9 @@ use strict;
 use warnings;
 
 use lib qw(../lib);
+use Memoize qw(memoize);
 use Math::BigNum qw(:constant);
 
-use Memoize qw(memoize);
 memoize('bernoulli_number');
 
 no warnings qw(recursion);
@@ -27,23 +27,17 @@ no warnings qw(recursion);
 #    $k == 0 || $n == $k ? 1.0 : binomial($n - 1, $k - 1) + binomial($n - 1, $k);
 #}
 
-sub bern_helper {
-    my ($n, $k) = @_;
-    Math::BigNum::binomial($n, $k) * (bernoulli_number($k) / ($n - $k + 1));
-}
-
-sub bern_diff {
-    my ($n, $k, $d) = @_;
-    $n < $k ? $d : bern_diff($n, $k + 1, $d - bern_helper($n + 1, $k));
-}
-
 sub bernoulli_number {
     my ($n) = @_;
 
     return 1 / 2 if $n == 1;
     return 0 / 1 if $n % 2;
 
-    $n > 0 ? bern_diff($n - 1, 0, 1.0) : 1.0;
+    my $bern = 1;
+    foreach my $k (0 .. $n - 1) {
+        $bern -= bernoulli_number($k) * Math::BigNum::binomial($n, $k) / ($n - $k + 1);
+    }
+    $bern;
 }
 
 for (my $i = 0 ; $i <= 100 ; $i += 2) {
